# ragflow-modules

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
files/markdown/: demo1.md  demo2.md  demo3.md  small_ocr.md
nlp/: merge.py  rag_tokenizer.py  tokens_num.py
parser/mark_down/: mark_down.py  markdown_parser.py  markdown_test.py  requirements.txt
parser/markdown_parser/: __init__.py  markdown_base.py  markdown_parser.py  markdown_test.py  utils.py
